--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="icon" href="img/favicon.png">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Regrow</title>
+    <title>Bubby</title>
   </head>
   <body class="" ng-app="myApp">
     <div class="preload">
       <div class="ed-container height100 cross-center">
         <div class="ed-item abcenter">
           <figure>
-            <img src="img/logo.svg" alt="">
+            <img src="img/logo-red.svg" alt="logo">
           </figure>
           <svg>
             <circle cx="90" cy="90" r="50">
@@ -21,34 +21,34 @@
         </div>
       </div>
     </div>
-    <header id="header">
-    <div class="barra">
-      <div class="ed-container justify">
-        <div class="ed-item base-50 web-30 cross-center">
-          <figure><img src="img/logo-blanco.svg" alt="logo"></figure>
-        </div>
-        <div class="ed-item base-50 web-25 cross-center abcenter">
-          <h2><span class="icon-telefono espacio">(011)   </span>5454-5454</h2>
-        </div>
-      </div>
-    </div>
-      <div class="ed-container height100 justify">
-        <div class="ed-item web-50 abcenter no-padding aparecer-izquierda">
-          <h1>Recuperá tu confianza, no solamente el cabello </h1>
-        </div>
-        <div class="ed-item desde-movil">
-          <figure><img src="img/logo.svg" alt="svg"></figure>
-        </div>
-      </div>
-    </header>
+   <header class="header">
+     <div class="ed-container height100 cross-center">
+       <div class="ed-item  abcenter">
+         <h2>RENOVATE CON <figure>
+           <img src="img/logo.svg" alt="">
+         </figure></h2>
+         <p>Nutricosmético para aumentar el busto</p>
+       </div>
+     </div>
+   </header>
+   <section id="seccion">
+     <div class="ed-container" id="header">
+       <div class="ed-item aparecer-derecha">
+         <h1>TU NUEVA VIDA <br>EMPIEZA AHORA</h1>
+       </div>
+       <div class="ed-item aparecer-izquierda">
+         <figure>
+           <img src="img/pack.png" alt="">
+         </figure>
+       </div>
+     </div>
+   </section>
     <section id="seccion1">
       <div class="ed-container" ng-controller="formularioCtrl">
         <form action="form.php" method="post" name="formularioTop" ng-submit="formularioTop.$valid">
           <div class="ed-item no-padding distributed height100">
             <div class="input aparecer-arriba">
-              <figure><img src="img/logo-blanco.svg" alt=""></figure>
-              <h5>COMPLETÁ EL FORMULARIO</h5>
-              <p>Y EMPEZÁ A DISFRUTAR LOS CAMBIOS.</p>
+              <h4>ASESORATE SIN COMPROMISO Y REALIZÁ CONSULTAS DE CUALQUIER TIPO</h4>
             </div>
             <div class="input aparecer-abajo">
               <input type="text"  name="nombre" ng-model="formData.nombre" placeholder="Nombre y Apellido" ng-minlength="2" required/>
@@ -77,101 +77,135 @@
     </section>
     <main>
       <section id="seccion2">
-        <div class="ed-container height100 cross-center">
-          <div class="ed-item tablet-60 aparecer-arriba">
-            <h2>¿Estás listo para terminar con la caída del cabello?</h2>
+        <div class="ed-container ">
+          <div class="ed-item no-padding aparecer-arriba">
+            <h2>LLAMÁ AL <span class="small">(011) </span><span>5272-3120</span> Y EMPEZÁ TU RENOVACIÓN</h2>
             <ul>
-              <li><span class="icon-aceptar"></span> Contra los signos de caída más fuertes.</li>
-              <li><span class="icon-aceptar"></span>Componentes activos contra la alopecia.</li>
-              <li><span class="icon-aceptar"></span>Rápido crecimiento.</li>
-              <li><span class="icon-aceptar"></span>100% efectivo.</li>
+              <li><span class="icon-aceptar"></span>RELLENA</li>
+              <li><span class="icon-aceptar"></span>REDONDEA</li>
+              <li><span class="icon-aceptar"></span>REALZA</li>
             </ul>
-            <h2>Todavía estás a tiempo de recuperar lo que creías perdido.</h2>
-            <p><span>Regrow</span> detiene la caída cabello, detiene los signos de pérdida y recupera los folículos capilares, <span>Regrow</span> diseñado exclusivamente para hombres modernos que necesitan una solución inmediata y efectiva.</p>
-            <p>Hoy podés recuperar tu cabello de forma natural y sana gracias a la perfecta combinación de <span>Hierbas + Aminoácidos</span> que fortalecen  la raíz, aumentan el grosor y sobre todo estimulan el crecimiento del bulbo piloso, ¡Esenciales para alcanzar un pelo saludable! Con <span>Regrow</span>, la caída del pelo será algo del pasado, la salud del cabello volverá con mayor vitalidad, fortaleza y suavidad que antes.</p>
+          </div>
+          <div class="ed-item web-25 no-padding abcenter">
+            <figure>
+              <img src="img/mujerPack.png" alt="">
+            </figure>
+          </div>
+          <div class="ed-item web-70 web-offset-5 no-padding">
+            <h3>CÓMO FUNCIONA</h3>
+            <p>Bubby Plus es efectivo porque está compuesto por hexapéptidos que estimulan la capa de colágeno presente en los tejidos mamarios, y que lo convierten en una alternativa natural a tratamientos como el botox, y a un costo mucho más accesible. Sus novedosos ingredientes penetran la piel, estimulan el tejido adiposo y logran bustos firmes y con más volumen. El plan de acción se realiza en la privacidad y comodidad del hogar: alcanza con aplicar diariamente Bubby Plus en la zona indicada y realizar un suave masaje hasta lograr su absorción. Gracias a su consistencia de gel transparente y sin perfume, no es grasoso ni pegajoso y permite vestirse rápidamente.</p>
+            <div class="tabla desde-movil">
+              <div class="lista lista-vacia"></div>
+              <div class="lista aparecer-derecha">AUMENTO DE VOLUMEN DEL BUSTO</div>
+              <div class="lista aparecer-derecha">PROCEDIMIENTO NO INVASIVO</div>
+              <div class="lista aparecer-derecha">ASPECTO NATURAL</div>
+              <div class="lista aparecer-derecha">REDEFINE LA FORMA</div>
+              <div class="lista lista-verde aparecer-izquierda"><figure><img src="img/logo.svg" alt=""></figure></div>
+              <div class="lista lista-verde aparecer-izquierda"><p class="icon-aceptar"></p></div>
+              <div class="lista lista-verde aparecer-izquierda"><p class="icon-aceptar"></p></div>
+              <div class="lista lista-verde aparecer-izquierda"><p class="icon-aceptar"></p></div>
+              <div class="lista lista-verde aparecer-izquierda"><p class="icon-aceptar"></p></div>
+              <div class="lista aparecer-derecha">IMPLANTES CON CIRUGÍA</div>
+              <div class="lista aparecer-derecha"><p class="icon-aceptar"></p></div>
+              <div class="lista aparecer-derecha"></div>
+              <div class="lista aparecer-derecha"></div>
+              <div class="lista aparecer-derecha"><p class="icon-aceptar"></p></div>
+              <div class="lista aparecer-derecha">OTROS PRODUCTOS</div>
+              <div class="lista aparecer-derecha"><p class="icon-aceptar"></p></div>
+              <div class="lista aparecer-derecha"><p class="icon-aceptar"></p></div>
+              <div class="lista aparecer-derecha"></div>
+              <div class="lista aparecer-derecha"></div>
+            </div>
           </div>
         </div>
       </section>
       <section id="seccion3">
-        <div class="ed-container height100 cross-center">
-          <div class="ed-item web-60 aparecer-abajo">
-           <h2>Regrow otorga una solución real para hombres reales:</h2>
-           <p>Hoy ya no es necesario padecer los problemas que ocasiona la pérdida del cabello.</p>
-           <p>Tu imagen personal  importa, por eso si tu cabello está mal, se nota. Para ayudarte a luchar contra estos signos, hemos diseñado un producto especial que hará que recuperes la fortaleza: <span>Regrow</span> restablece y restaura los folículos capilares desde la raíz para que vuelvas a confiar en vos mismo.La salud del cabello influye en el ánimo, en tu éxito profesional y sentimental, define tu masculinidad y el mensaje que transmitís a la sociedad. Debe mantenerse fuerte  y con un crecimiento rápido, para ello hemos diseñado <span>Regrow:</span></p>
-           <h2>No es un tratamiento químico y mantendrá la salud de las hebras comenzando desde la raíz.</h2>
-           <p><span>Regrow</span> <i>restablece y restaura los folículos capilares desde la raíz para que estés radiante a través de la más novedosa tecnología cosmética natural.</i></p>
-           <h2>¡Todavía no es tarde! Pedí hoy tu Regrow para terminar contra los signos de la caída del cabello y recuperar.</h2>
+        <div class="ed-container">
+          <div class="ed-item no-padding aparecer-abajo">
+            <h2 class="abcenter cross-center">DALE MÁS VOLUMEN A TUS SENOS</h2>
           </div>
-          <div class="ed-item web-40 cabello aparecer-derecha">
+          <div class="ed-item tablet-55 aparecer-izquierda">
+            <h3>NO TE DEPRIMAS MÁS</h3>
+            <hr>
+            <p>La sociedad lo muestra a diario: la imagen social de la mujer está muy influenciada por el tamaño de su busto. Por este motivo muchas chicas sufren y se sienten atormentadas cuando la imagen que les devuelve el espejo no les satisface, ya que temen no agradarles a sus parejas o aún encontrar dificultades para conseguir trabajo. Aquellas que pueden, incluso, gastan importantes sumas de dinero en cirugías riesgosas que dan como resultado mamas poco naturales y plásticas al tacto.</p>
+          </div>
+          <div class="ed-item tablet-45">
             <figure>
-              <img src="img/pelo.png" alt="">
+              <img src="img/img4.jpg" alt="">
             </figure>
-            <h2 class="cabello">Regrow restablece y restaura los folículos capilares desde la raíz para que vuelvas a confiar en vos mismo.</h2>
+          </div>
+          <div class="ed-item aparecer-derecha">
+            <br>
+            <p class="colorRed">La ciencia europea, sin embargo, ha desarrollado caminos alternativos en base a sustancias naturales que permiten incrementar el busto a partir de potenciar los recursos que a cada mujer le dio.</p>
+            <p><span>Bubby Plus </span>son comprimidos que se ingiere dos veces al día y permite que los tejidos grasos presentes en las mamas se concentren y desarrollen progresivamente. De esa manera, el resultado visual y táctil son pechos voluminosos, turgentes y naturalmente firmes.</p>
           </div>
         </div>
       </section>
       <section id="seccion4">
-        <div class="ed-container height100 distributed">
-          <div class="ed-item cross-center aparecer-arriba">
-            <h2>¿Cuáles son las causas de la pérdida o crecimiento débil del cabello?</h2>
-            <p>El problema de la calvicie puede aparecer por envejecimiento, herencia, problemas hormonales o como reacción adversa a ciertos medicamentos o por  una mala nutrición. Por eso <span>Regrow</span>, hecho a partir de sustancias de origen natural, te brinda una solución sin químicos cualquiera sea tu necesidad.</p><p><span>Regrow</span> es un tratamiento especialmente diseñado para hombres que necesitan una solución efectiva contra la caída del cabello.</p>
+        <div class="ed-container distributed">
+          <div class="ed-item aparecer-arriba abcenter no-padding">
+            <h2>TESTIMONIOS</h2>
           </div>
-          <div class="item box-blue abcenter cross-center aparecer-derecha desde-movil">
-            <h3>Volvé a tener un cabello sano otra vez, <span>Regrow</span> fue creado a partir de sustancias naturales: <br> <span>HIERBAS + AMINOÁCIDOS</span> que  te devolverán:</h3>
-            <div class="flex flex-around">
-              <li><span class="icon-aceptar"></span>El crecimiento</li>
-              <li><span class="icon-aceptar"></span>La fortaleza del bulbo</li>
-              <li><span class="icon-aceptar"></span>Tu confianza</li>
-            </div>
-          </div>
-          <div class="ed-item tablet-50 no-padding movil-main-center cross-center web-main-start aparecer-izquierda">
+          <div class="ed-item tablet-30 aparecer-derecha">
             <figure>
-              <img src="img/pelomalo.png" alt="">
-              <figcaption>
-                PELO DAÑADO
-              </figcaption>
+              <img src="img/img-9.jpg" alt="">
             </figure>
+            <q>
+             Desde la adolescencia sufrí el tamaño de mis lolas. Mis amigas se desarrollaron y todas se divertían con los escotes. Íbamos a bailar y yo quedaba para el final, así que fue algo que verdaderamente me traumó. Hasta  que para mi cumpleaños de 22 mi mamá me regaló Bubby Plus y empecé el plan de acción. Estoy… ¡feliz! Me crecieron 5 centímetros, subí un talle de sostén y ya me están quedando chicos. 
+            </q>
+            <p>
+              <cite>Leticia, 22 años, estudiante.</cite>
+            </p>
           </div>
-          <div class="ed-item tablet-50 no-padding movil-main-center cross-center web-main-end apareer-derecha">
+          <div class="ed-item tablet-30 aparecer-izquierda">
             <figure>
-              <img src="img/pelosano.png" alt="">
-              <figcaption>
-                PELO SANO
-              </figcaption>
+              <img src="img/img-8.jpg" alt="">
             </figure>
+            <q>
+              Soy deportista de alto rendimiento y a medida que fui desarrollando la musculatura los pechos se me redujeron, así que busqué la forma de equilibrar. Y en Bubby Plus la encontré sin dudas, ¡a tal punto que tuve que renovar todos los corpiños porque ya no me sostenían! Lo recomiendo absolutamente.
+            </q>
+            <p>
+              <cite>Jimena, 28 años, maratonista.</cite>
+            </p>
+          </div>
+          <div class="ed-item tablet-30 aparecer-derecha">
+            <figure>
+              <img src="img/img-7.jpg" alt="">
+            </figure>
+            <q>
+              Siempre tuve delantera, pero hace un año noté que ya no estaban igual. La gravedad estaba haciendo su trabajo: ¡estaba perdiendo mis armas de seducción! Así que empecé a averiguar. La salida fácil era la cirugía, pero me daba miedo por el riesgo y se me iba con los costos. Probé las duchas de agua fría, los ejercicios localizados y nada me conformaba. Finalmente probé Bubby Plus y en la calle me di cuenta de que no lo tenía que cambiar por nada.
+            </q>
+            <p>
+              <cite>Andrea, 34 años, recepcionista.</cite>
+            </p>
           </div>
         </div>
       </section>
       <section id="seccion6">
-        <div class="ed-container height100 cross-center">
-          <div class="ed-item web-45 aparecer-abajo">
-            <h2>¡Comenzá hoy mismo<br>con Regrow a disfrutar<br>de una cabellera abundante otra vez!</h2>
-            <p>Hoy es la oportunidad para dejar de soportar las consecuencias de la caída y la pérdida del cabello. </p>
+        <div class="ed-container">
+          <div class="ed-item no-padding aparecer-arriba">
+            <ul>
+              <li><span class="icon-aceptar"></span>RELLENA</li>
+              <li><span class="icon-aceptar"></span>REDONDEA</li>
+              <li><span class="icon-aceptar"></span>REALZA</li>
+            </ul>
           </div>
-          <div class="ed-item web-70 no-padding">
-            <div class="ed-container height100 ptop">
-              <div class="ed-item movil-35 cross-center">
-                <figure>
-                  <img src="img/pack.png" alt="">
-                </figure>
-              </div>
-              <div class="ed-item movil-65 cross-center">
-                <h3>Regrow es Tecnología Cosmética a tu favor:</h3>
-                <ol>
-                  <li class="aparecer-izquierda">Restaura la pérdida.</li>
-                  <li class="aparecer-derecha">Previene la caída.</li>
-                  <li class="aparecer-izquierda">Fortalece el bulbo piloso.</li>
-                  <li class="aparecer-derecha">Lucha efectiva contra la alopecia.</li>
-                </ol>
-              </div>
-            </div>
+        </div>
+        <div class="ed-container justify">
+          <div class="ed-item tablet-30">
+            <figure>
+              <img src="img/pack2.png" alt="">
+            </figure>
+          </div>
+          <div class="ed-item tablet-65 cross-center">
+            <h3>LLAMÁ AHORA AL <span>(011)<span class="big"> 5272 3120</span> <br>Y LUCÍ EL CUERPO QUE SIEMPRE SOÑASTE</span> <br>¡NO ESPERES MÁS!</h3>
           </div>
         </div>
       </section>
       <section id="seccion5">
         <div class="ed-container">
           <div class="ed-item abcenter">
-            <h2>TODAVÍA ESTÁS A TIEMPO DE RECUPERAR LO QUE CREÍAS PERDIDO</h2>
+            <h2>BELLAMENTE ATRACTIVA SÓLO EN DÍAS</h2>
           </div>
           <div class="ed-item abcenter no-padding" ng-controller="formularioCtrl">
             <form action="form.php" method="post" name="formularioTop" ng-submit="formularioTop.$valid" class="ed-container">
@@ -229,9 +263,9 @@
         </div>
       </div>
       <div class="ed-container full footer">
-        <div class="ed-item abcenter">
+        <div class="ed-item abcenter aparecer-abajo">
           <p>Las imágenes fueron retocadas y/o modificadas digitalmente. // Los resultados pueden variar de persona en persona.</p>
-          <p>Regrow&#174; es una marca registrada <a href="terminos.html">terminos y condiciones.</a></p>
+          <p>Bubby&#174; es una marca registrada <a href="terminos.html">terminos y condiciones.</a></p>
         </div>
       </div>
     </footer>
